# applications_call

./: .gitignore  BUILD.gn  LICENSE  OAT.xml  README.en.md  README.md  README_zh.md  build-profile.json5  build.gradle  gradlew  gradlew.bat  hvigorfile.js  hvigorw.bat  local.properties  oh-package.json5  package.json  settings.gradle
AppScope/: app.json  app.json5
CallRecorder/: .gitignore  OAT.xml  README.md  README_zh.md  build-profile.json5  oh-package.json5  publicity.xml
CallRecorder/entry/src/main/cpp/: CMakeLists.txt  NapiInit.cpp
CallRecorder/entry/src/main/cpp/napi/: callRecorder.cpp  callRecorder.h  log.h  utils.h
CallRecorder/entry/src/main/cpp/types/libcallrecorder/: Index.d.ts  oh-package.json5
CallSetting/: .gitignore  OAT.xml  README.md  README_zh.md  build-profile.json5  build.sh  oh-package.json5  publicity.xml
CommunicationSetting/: .gitignore  OAT.xml  README.md  README_zh.md  build-profile.json5  build.sh  gradlew  hvigorfile.ts  hvigorw.bat  oh-package.json5  publicity.xml  replace_hvigorfile.ts  replace_oh-package-lock.json5  replace_oh-package.json5
EmergencyCommunication/: .gitattributes  .gitignore  OAT.xml  README.md  README_zh.md  build-profile.json5  build.sh  gradlew  hvigorfile.ts  oh-package.json5  publicity.xml
callui/: .gitignore  OAT.xml  README.md  README_zh.md  build-profile.json5  build.gradle  build.sh  hvigorfile.ts  oh-package.json5  package.json  publicity.xml
common/: index.ets  oh-package.json5  package.json
doc/: Instructions.md
hvigor/: hvigor-config.json5
mobiledatasettings/: build-profile.json5  (+3 more)
(+1899 files in other folders)
